# auth-docker

./: .env  Dockerfile  README.md  app.sh  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
app/: config.py  database.py  exceptions.py  main.py
app/auth/: exceptions.py  middlewares.py  models.py  repositories.py  responses.py  router.py  schemas.py  services.py  utils.py
app/migrations/: env.py
app/migrations/versions/: 167275b5a209_add_users_add_refresh_tokens_tables.py  48f794752e0f_add_auth_user_table.py  a284d8f70703_add_refresh_token_table.py
tests/: conftest.py
tests/auth_tests/: test_api.py
tests/mocks/: users.json
